@@ -265,6 +265,10 @@
             <version>3.13.0</version>
             <configuration>
                 <release>21</release>
+                <compilerArgs>
+                    <arg>--add-modules</arg>
+                    <arg>javafx.graphics,javafx.swing</arg>
+                </compilerArgs>
             </configuration>
         </plugin>
 
@@ -282,10 +286,7 @@
                         <outputDirectory>D:/Descargas/VisorV2</outputDirectory>
                         <finalName>VisorV2</finalName>
                         <artifactSet>
-                        <excludes>
-                            <exclude>org.openjfx:javafx-*</exclude>
-                        </excludes>
-                    </artifactSet>
+                        </artifactSet>
                     <transformers>
                             <!-- Transformer 1: Para la clase principal -->
                             <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
@@ -313,26 +314,6 @@
             </executions>
         </plugin>
 
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-dependency-plugin</artifactId>
-            <version>3.7.1</version>
-            <executions>
-                <execution>
-                    <id>copy-javafx</id>
-                    <phase>package</phase>
-                    <goals>
-                        <goal>copy-dependencies</goal>
-                    </goals>
-                    <configuration>
-                        <includeGroupIds>org.openjfx</includeGroupIds>
-                        <includeClassifiers>${javafx.platform}</includeClassifiers>
-                        <outputDirectory>D:/Descargas/VisorV2/lib</outputDirectory>
-                        <excludeTransitive>false</excludeTransitive>
-                    </configuration>
-                </execution>
-            </executions>
-        </plugin>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-antrun-plugin</artifactId>
